examples/type_system/failing/179_data_missing_open_brace.flx
data Maybe<T> Some(T), None }
let after = 1
